prometheus/cluster/overlays/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-internal
  labels:
    app: prometheus
    prometheus: "cluster"
  name: prometheus
spec:
  rules:
    - host: prometheus.production.example.com
      http:
        paths:
          - path: "/"
            backend:
              serviceName: "prometheus"
              servicePort: 9090
